One last(!) read-through. Bump sizes from pt to bp

--- a/back.tex
+++ b/back.tex
@@ -115,11 +115,10 @@ in the Unicode standard.
 
 Finally,
 {\lm Latin Modern}---the OpenType version of Knuth's Computer Modern used throughout
-the book---as well
-as {\fontspec[Scale=MatchUppercase]{TeX Gyre Termes}\TeX{} Gyre Termes}---the
-free alternative to Times Roman seen on page \pageref{typography}---are from
-the digital type foundry of Grupa Użytkowników Systemu \TeX{},
-the Polish \TeX{} Users' Group.
-An overview of their excellent work can be found at the following locations:\\
+the book---and
+{\fontspec[Scale=MatchUppercase]{TeX Gyre Termes}\TeX{} Gyre Termes}---the
+free alternative to Times Roman seen on page \pageref{typography}---are the
+work of Grupa Użytkowników Systemu \TeX{}, the Polish \TeX{} Users' Group.
+An overview of these projects can be found at the following locations:\\
 \http{www.gust.org.pl/projects/e-foundry/latin-modern} \\
 \http{www.gust.org.pl/projects/e-foundry/tex-gyre}.
