--- a/fonts.tex
+++ b/fonts.tex
@@ -60,10 +60,10 @@ open-source typefaces are freely available at
 \end{leftfigure}
 The \verb|Ligatures=TeX| option lets you use the punctuation
 shortcuts from \chapref{punctuation} (e.g., \texttt{--} for en dashes, or
-\texttt{``} and \texttt{''} for curly quotes) instead of forcing you
-to enter the the corresponding characters,
+\texttt{``} and \texttt{''} for curly quotes)
+instead of forcing you to enter the the corresponding characters,
 which probably aren't on your keyboard.
-You often don't want these when setting monospaced type, though.
+You often don't want these substitutions when setting monospaced type, though.
 Text that uses it---such as code---is usually meant to be printed
 verbatim. \verb|"Hello!"| shouldn't turn into
 \verb|“Hello!“|.
