--- a/hello.tex
+++ b/hello.tex
@@ -61,7 +61,8 @@ Many classes are available---and you can even create your own---but common
 ones include \texttt{article}, \texttt{report}, \texttt{book},
 and \texttt{beamer}.\punckern\footnote{This last one is for slideshows.
 The name is a German term for a projector.}
-\texttt{article} is probably a good choice for the average document.
+For the average document,
+\texttt{article} is probably a good choice.
 The next line, \verb|% Say hello|,
 is a \introduce{comment}---any text placed after \texttt{\%} on a line
 is ignored by the engine,
@@ -197,7 +198,7 @@ Regardless of what comes after them, you must always add braces to
 the caret (\,\texttt{\^{}}\,) and tilde (\,\~{}\,).
 This is a relic from the days when these commands were used to produce
 \introduce{diacritical marks}:
-once upon a time, users had to typeset ``jalapeño'' as
+once upon a time, users would typeset ``jalapeño'' with
 \verb|jalape\~no|.
 Today, we just type \texttt{ñ} into our source
 file.\punckern\footnote{The ease with which you can do this depends
