--- a/history.tex
+++ b/history.tex
@@ -75,7 +75,7 @@ It was introduced in 1986 with his guide,
 Other typesetting systems based on \TeX{} also exist,
 the other most popular today being Con\TeX{}t.
 
-Development continues,
+Development continues today,
 both in the form of user-provided packages for \TeX{} and \LaTeX{},
 and as improvements to the \TeX{} typesetting program itself.
 There are four versions, or \introduce{engines}:
@@ -121,7 +121,7 @@ so Knuth set out to make \TeX{} into one.
 As part of this effort, \TeX{} was written in a style he calls
 \introduce{literate programming}: opposite most programs---where
 documentation is interspersed throughout the code---Knuth wrote \TeX{} as a book,
-with the code interspersed between paragraphs.
+with the code inserted between paragraphs.
 This mix of English and code is called \texttt{WEB}.\punckern\footnote{Knuth
 also released a pair of companion programs named
 \texttt{TANGLE} and \texttt{WEAVE}.
@@ -134,7 +134,7 @@ so present-day distributions use another program,
 \texttt{web2c}, to convert its \texttt{WEB} source into C code.
 pdf\TeX{} and \XeTeX{} are built by combining the result with other C
 and \cpp{} sources.
-Instead of following this complicated process,
+Instead of taking this complicated approach,
 the \LuaTeX{} authors hand-translated Knuth's Pascal into C.
 They have used the resulting code since 2009.\punckern\endnote{%
 Taco Hoekwater, \textit{\LuaTeX{} says goodbye to Pascal}
