--- a/installation.tex
+++ b/installation.tex
@@ -45,9 +45,9 @@ Each major operating system has its own \LaTeX{} distribution:
 
 Since \LaTeX{} source files are regular text files,
 you're free to create them with the usual choices, like Vim, Emacs,
-Sublime, Notepad\plusplus, and so on.\punckern\footnote{If you have never used
+Sublime, Notepad\plusplus, and so on.\punckern\footnote{If you've never used
 any of these, try a few.
-They're popular among programmers and other folks who shuffle text around
+They're popular with programmers and other folks who shuffle text around
 screens all day. Just don't use Notepad. Life is too short.}
 There are also editors designed specifically for \LaTeX{},
 which often come with their own built-in \acronym{pdf} viewer.
