--- a/micro.tex
+++ b/micro.tex
@@ -74,5 +74,5 @@ You'll need to use \LuaLaTeX{} if you'd like to take advantage of it.
 As always, see the package manual for ways to tweak these features.
 \texttt{microtype} is capable of a few other tricks,
 but several only work on older \LaTeX{} engines.\punckern\footnote{i.e., pdf\TeX}
-Those we do care about---such as letterspacing---can be handled with
+Those we care about---such as letterspacing---can be handled with
 \texttt{fontspec} or other packages.
