--- a/structure.tex
+++ b/structure.tex
@@ -80,7 +80,7 @@ Authors often split their works into sections to help readers navigate them.
 \LaTeX{} offers seven different commands to break up your documents:
 \verb|\part|, \verb|\chapter|, \verb|\section|, \verb|\subsection|,
 \verb|\subsubsection|, \verb|\paragraph|, and \verb|\subparagraph|.
-Issue the command command where you want a section\footnote{By this
+Issue the command where you want a section\footnote{By this
 I mean any level, not just \texttt{\textbackslash section}.} to start,
 providing its name as the argument.
 For example,
