--- a/why.tex
+++ b/why.tex
@@ -4,8 +4,7 @@
 Modern life is a constant battle for your time,
 fought by endless hordes of ads, apps, clips, emails, sites, shows, and texts.
 To put ideas into the world amidst this din,
-nothing matters more than seizing
-your audience's attention.
+your must seize your audience's attention.
 And when we write, we don't just reach readers with our words.
 We grab them with \introduce{typography}: how those words appear.
 Good design isn't mere art---it's function.
@@ -56,7 +55,7 @@ By carefully handling subtle details,
 with little effort from you, the author.
 Modern versions can also leverage recent\footnote{By recent,
 I mean ``from the mid-1990s''\quotekern, but web browsers and desktop publishing
-software are only just starting to catch up.} advances in computer typography,
+software are only just starting to catch up.} advances in digital typesetting,
 offering you the same tools used by professional graphic designers and
 publishers.
 
@@ -106,8 +105,7 @@ However, it comes with a few advantages:
     At the start of each document,
     you describe the design you want.
     \LaTeX{} takes it from there, maintaining consistent
-    fonts, sizes, page layouts, and other formatting concerns across your
-    whole text.
+    formatting across your whole text.
     Compare this to a \acronym{wysiwyg} system,
     where you constantly deal with appearances
     as you write.
@@ -151,12 +149,11 @@ After all, it's existed for decades.
 A quick Amazon search finds nearly a dozen books on the topic.
 There are plenty of great resources online.
 
-Unfortunately, most of these introductions have two fatal flaws: they are long,
-and they are old.
-The first is anathema to newcomers---if somebody asks about \LaTeX{},
+Unfortunately, most of the introductions you will find have two fatal flaws:
+they are long, and they are old.
+Their length is anathema to newcomers---if somebody asks about \LaTeX{},
 throwing a 200+ page book at them isn't an encouraging start.
-The second matters because of how much the world of typesetting has
-changed since 1986.
+Their age matters because of how much typesetting has changed since 1986.
 
 When \LaTeX{} was first released that year, none of the publishing technologies
 we use today existed.
