Final title futzing
Make the cover real big-like, while returning to the original-ish size
for the title page.

--- a/front-cover.tex
+++ b/front-cover.tex
@@ -5,6 +5,7 @@
 % We're aiming for 80-ish characters per line.
 \usepackage[a5paper,
             inner=0.6in,outer=0.6in,top=0.75in,bottom=0.5in,
+            footnotesep=11bp,
             footskip=3em,
             includefoot,
            ]{geometry}
@@ -72,7 +73,7 @@
 
 \usepackage{xcolor}
 
-\title{Modern LaTeX Back Cover}
+\title{Modern LaTeX Front Cover}
 \author{Matt Kline}
 \date{\today}
 
@@ -85,10 +86,10 @@
 \pagestyle{empty}
 \vspace*{1in}
 \begin{center}
-\fontsize{0.6in}{0.6in}\selectfont
+\fontsize{0.7in}{0.7in}\selectfont
 Modern
 
-\fontsize{1.2in}{1.2in}\selectfont
+\fontsize{1.4in}{1.3in}\selectfont
 \LaTeX
 \vfill
 \LARGE
