Back cover: Use same geometry args

--- a/back-cover.tex
+++ b/back-cover.tex
@@ -5,6 +5,7 @@
 % We're aiming for 80-ish characters per line.
 \usepackage[a5paper,
             inner=0.6in,outer=0.6in,top=0.75in,bottom=0.5in,
+            footnotesep=11bp,
             footskip=3em,
             includefoot,
            ]{geometry}
