--- a/latex-book.tex
+++ b/latex-book.tex
@@ -295,6 +295,8 @@
 \newcommand{\http}[1]{\href{http://#1}{\texttt{#1}}}
 \newcommand{\https}[1]{\href{https://#1}{\texttt{#1}}}
 
+\newcommand{\edition}{First edition}
+
 % See http://tex.stackexchange.com/a/68310
 \makeatletter
 \let\runauthor\@author
@@ -326,9 +328,14 @@ Modern
 
 \fontsize{1in}{0.9in}\selectfont
 \LaTeX
-\vfill
+
+\normalsize
+\vspace{1.5\baselineskip}
+\edition
+\vspace{2in}
+
 \LARGE
-Matt Kline
+\runauthor
 \end{center}
 \clearpage
 
@@ -352,7 +359,7 @@ The license's full text is available at \\
 
 The author apologizes for any typos,
 f\raisebox{-0.1ex}{o}rmatt\raisebox{0.1ex}{i}ng mistakes,
-misattributions,
+inaccuracies,
 and other flubs.
 He welcomes you to point them out via this book's Git repository at \\
 \https{github.com/mrkline/latex-book}
@@ -367,7 +374,7 @@ but will happily compensate your feedback with a beverage of your choice
 next time we meet.
 
 \vspace{0.5in}
-First edition, typeset \today.
+\edition, typeset \today.
 } % end ragged right
 \clearpage
 
