Back cover: Let's go!

--- a/back-cover.tex
+++ b/back-cover.tex
@@ -97,25 +97,6 @@ it remains one of the best typesetting programs around.
 Many of its guides, however, haven't aged as well.
 This short book will get you started with \LaTeX{}
 without bogging you down in nonsense that lost its relevance
-in the 1990s.
-\vspace{0.5in}
-
-Hopefully the author thinks of something more inspired than the blurb above before
-actually publishing a first edition.
-Thankfully, this is a draft for people who know him all too well---that is,
-at all.
-
-\vspace{2in}
-\sffamily%
-\Large%
-\begin{center}
-\color{red}
-\textbf{This is (still) a proof.}
-\bigskip
-
-Expect mistakes,\\
-both in speelling and f\raisebox{-0.2ex}{o}rmatt\raisebox{0.1ex}{i}ng.\\
-All complaints are appreciated.
-\end{center}
+back in the 90s. % I was in a very famous TV show.
 
 \end{document}
