No URL for NHG in colophon
I don't do it for any of the other typefaces, nor is that the only place
to view or buy it.

--- a/back.tex
+++ b/back.tex
@@ -91,7 +91,7 @@ Monospaced items are set in \texttt{Drive Mono},
 designed by Elliott Amblard and Jérémie Hornus at Black Foundry.
 
 Captions use
-\href{http://www.fontbureau.com/NHG/}{\textsf{\small Neue Haas Grotesk}},
+\textsf{\small Neue Haas Grotesk},
 a Helvetica restoration by Christian Schwartz.
 Other digitizations of the ubiquitous Swiss typeface are based on fonts made for
 Linotype and phototypesetting machines,
