Don't use blank pages on the internet.

--- a/back.tex
+++ b/back.tex
@@ -79,7 +79,7 @@ Available (for free!) at \https{practicaltypography.com}
 
 % Redefine cleardoublepage so the Colophon doesn't demand a front page.
 % From https://tex.stackexchange.com/a/24068/92465
-{\let\cleardoublepage\clearpage \chapter{Colophon}}
+\chapter{Colophon}
 
 This guide was typeset with \LuaLaTeX{} in Robert Slimbach's Garamond Premier.
 His revival is based on roman type by
