--- a/latex-book.tex
+++ b/latex-book.tex
@@ -317,6 +317,9 @@
 \widowpenalty=10000
 \clubpenalty=10000
 
+% For an online PDF, blank pages are annoying.
+\renewcommand{\cleardoublepage}{\clearpage}
+
 \begin{document}
 \fontsize{11bp}{13bp}\selectfont
 
