--- a/back-cover.tex
+++ b/back-cover.tex
@@ -88,10 +88,10 @@
 \setlength\parindent{0pt}
 
 \LaTeX{} is a tool for creating beautiful writing,
-or a torture device that drives users to the brink of madness
+or a torture device that drives you to the brink of madness
 every\enspace time
-they\enspace see\quad
-bad\quad spacing\quad for the rest of their\,lives.
+you\enspace see\quad
+bad\quad spacing\quad for the rest of your\,life.
 One of the two.
 Despite origins that can be traced back four decades,
 it remains one of the best typesetting programs around.
