--- a/hello.tex
+++ b/hello.tex
@@ -21,7 +21,7 @@ The installation placed several different versions---or
 \introduce{engines}---on your machine,
 but throughout this book, we'll always use the newest ones:
 \LuaLaTeX{} and \XeLaTeX.\punckern\footnote{See Appendix~\ref{history} for a
-comparison of all current \LaTeX{} engines.}
+comparison of current \LaTeX{} engines.}
 
 If you are using a \LaTeX{}-specific editor, it should contain some method
 (like a drop-down menu) to select the engine you'd like to use,
@@ -64,9 +64,9 @@ The name is a German term for a projector.}
 For the average document,
 \texttt{article} is probably a good choice.
 The next line, \verb|% Say hello|,
-is a \introduce{comment}---any text placed after \texttt{\%} on a line
+is a \introduce{comment}---since text placed after \texttt{\%} on a line
 is ignored by the engine,
-so we use it to leave notes for anybody reading
+we use it to leave notes for anybody reading
 the document's source.\punckern\footnote{Including, perhaps most importantly,
 a confused version of your future self!}
 Finally, \verb|\begin{document}| tells \LaTeX{} that what follows
@@ -201,10 +201,9 @@ This is a relic from the days when these commands were used to produce
 once upon a time, users would typeset ``jalapeño'' with
 \verb|jalape\~no|.
 Today, we just type \texttt{ñ} into our source
-file.\punckern\footnote{The ease with which you can do this depends
-on your keyboard, your editor, and the language settings in your \acronym{os}.
-We'll talk much more about non-English languages and Unicode fun
-in \chapref{i18n}.}
+file.\punckern\footnote{The ease of doing so depends
+on your keyboard, your editor, and language settings in your \acronym{os}.
+We'll talk much more about languages and Unicode fun in \chapref{i18n}.}
 
 If you're wondering why we print \texttt{\textbackslash} with
 \verb|\textbackslash| instead of \verb|\\|\,,
@@ -242,7 +241,7 @@ that critical 3\%.
 \end{quote}
 \end{lstlisting}
 \end{leftfigure}
-quotes
+produces
 \begin{leftfigure}
 \lm
 Donald Knuth once wrote,
