--- a/installation.tex
+++ b/installation.tex
@@ -20,12 +20,12 @@ Each major operating system has its own \LaTeX{} distribution:
 
 \item[Windows] has Mik\TeX.
     Install it from \https{miktex.org/download}.
-    Mik\TeX{} offers the unique ability to automatically download
+    Mik\TeX{} offers the helpful ability to automatically download
     additional packages whenever a document uses one that it can't find
     on your computer.
 
 \item[Linux and BSD] use \TeX{} Live.
-    Like most software, this is provided through your
+    Like most software, it is provided through your
     \acronym{os}'s package manager.
     Linux distributions usually contain a \texttt{texlive-\allowbreak full}
     or \texttt{texlive-\allowbreak most} package that installs everything
@@ -60,5 +60,5 @@ If you'd rather not install \LaTeX{} on your computer,
 you can try online editors such as Share\LaTeX{} and Overleaf.
 This book won't focus on these web-based tools,
 but almost all of the same basics apply.
-Of course, you have less control over certain aspects of online versions,
+Of course, you have less control over certain aspects of online systems,
 like available fonts, the version of \LaTeX{} that's used, and so on.
