--- a/structure.tex
+++ b/structure.tex
@@ -38,7 +38,7 @@ Package manuals are also found there,
 so make it your first stop when learning how to use one.
 
 To import a package, add a \verb|\usepackage| command,
-using the package's name as its argument.
+using its name as the argument.
 As a simple example, let's write a document with the \texttt{metalogo}
 package, which adds \verb|\LuaLaTeX| and \verb|\XeLaTeX|:
 \begin{leftfigure}
@@ -58,7 +58,8 @@ should get you a \textsc{pdf} that reads
 \lm \XeLaTeX{} and \LuaLaTeX{} are neat.
 \end{leftfigure}
 \end{samepage}
-Like other commands, \verb|\usepackage| accepts optional arguments.
+\verb|\usepackage| accepts optional arguments,
+which it passes to the package you are importing.
 The \texttt{geometry} package, for instance,
 takes your desired paper size and margins.
 For \acronym{us}~\textsc{l}etter paper with one-inch margins,
@@ -76,12 +77,13 @@ so long as there are no empty lines between arguments.
 
 \section{Titles, sections, and other hierarchy}
 
-Authors often split their works into sections to help readers navigate them.
+Authors often split their work into sections to help readers navigate them.
 \LaTeX{} offers seven different commands to break up your documents:
 \verb|\part|, \verb|\chapter|, \verb|\section|, \verb|\subsection|,
 \verb|\subsubsection|, \verb|\paragraph|, and \verb|\subparagraph|.
 Issue the command where you want a section\footnote{By this
-I mean any level, not just \texttt{\textbackslash section}.} to start,
+I mean any of those seven commands, not just \texttt{\textbackslash section}.}
+to start,
 providing its name as the argument.
 For example,
 \begin{leftfigure}
@@ -109,7 +111,7 @@ for example, only appear in books.
 And don't go too crazy with these commands.
 Most works only benefit from a few levels of hierarchy.
 
-Sections are automatically numbered---for example,
+Sections are automatically numbered---for instance,
 the title of this chapter was produced with \verb|\chapter{Document Structure}|,
 and \LaTeX{} figured out that it was chapter~\ref{structure}.
 
@@ -124,11 +126,11 @@ Consider learning how to:
 \begin{itemize}
 \item Automatically start your document with its title, the author's name,
     and the date using \verb|\maketitle|.
-\item Have \LaTeX{} build a table of contents
+\item Build a table of contents
     with \verb|\tableofcontents|.
 \item Control section numbers with \verb|\setcounter{secnumdepth}|
 and starred section commands, e.g., \verb|\subsection*{foo}|.
-\item Create auto-updating cross-references with \verb|\label| and \verb|\ref|.
+\item Create cross-references with \verb|\label| and \verb|\ref|.
 \item Use KOMA~Script, a set of document classes and packages
 that help you customize nearly every aspect of your document,
 from heading fonts to footnotes.
