Debugging for Arch's TeX Live 2019 distro

--- a/modern-latex.tex
+++ b/modern-latex.tex
@@ -7,6 +7,9 @@
 % which is how most distros package LaTeX.
 \documentclass[fontsize=11bp, numbers=endperiod, draft=true]{scrbook}
 
+% Hm: https://mailman.ntg.nl/pipermail/dev-luatex/2019-February/006186.html
+\automatichyphenmode=1
+
 % Margins: see http://practicaltypography.com/page-margins.html and
 % http://practicaltypography.com/line-length.html
 % We're aiming for 80-ish characters per line.
